2025-07-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.16

	* src/ql/utilities/null.hpp: Updated from QuantLib 1.39

	* configure: Add a compiler flag hint to console

2025-07-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/Makevars.in: Adjust for QL 1.39 via DQL_USE_STD_OPTIONAL
	* src/Makevars.win.in: Idem

	* src/ql/errors.cpp: Updated from QuantLib 1.39 (rc)
	* src/ql/optional.hpp: Idem
	* src/ql/time/calendar.cpp: Idem
	* src/ql/time/calendars/israel.?pp: Idem
	* src/ql/time/dat.cpp: Idem

2025-04-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.15

	* src/ql/time/calendars/china.cpp: Updated from QuantLib 1.38
	* src/ql/time/calendars/hongking.cpp: Idem
	* src/ql/time/calendars/thailand.cpp: Idem

2025-02-14  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Use r-ci action with bootstrap

2025-01-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.14

	* inst/examples/allUScalendars.R: Moved from demo/
	* demo/: Removed

2025-01-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/ql/time/calendars/newzealand.?pp: Updated from QuantLib 1.37 (rc)
	* src/ql/time/calendars/unitedstates.cpp: Idem

	* src/calendars.cpp (QlCal::CalendarContainer::setCalendar): Add
	'Auckland' to new New Zealand with 'Wellington' the default as before

2024-10-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.13

2024-10-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/ql/time/calendars/poland.?pp: Updated from QuantLib 1.36 (rc)
	* src/ql/time/calendars/southkorea.cpp: Idem

	* src/ql/*: Small updates from 1.36 (rc) to nine more files

2024-09-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added
