@@ -1,3 +1,9 @@
+2025-10-03  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/ql/time/period.cpp: Updated from QuantLib 1.40rc
+	* src/ql/time/calendars/singapore.cpp: Idem (for 2025)
+	* src/ql/*: Updated QuantLib html URLs
+
 2025-07-23  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.0.16
